--- a/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
@@ -6,41 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.RegistrarUsuarios">
+    tools:context=".LoginActivity">
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/ic_user"
+        android:layout_gravity="center"/>
 
     <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:indeterminate="true"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:indeterminate="true"/>
 
     <EditText
-        android:id="@+id/txtNombre"
+        android:id="@+id/txtUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:layout_margin="10dp"
-        android:hint="Nombre"
-        android:inputType="textPersonName"/>
-
-    <EditText
-        android:id="@+id/txtApellido"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_margin="10dp"
-        android:hint="Apellido"
-        android:inputType="textPersonName"/>
-
-    <EditText
-        android:id="@+id/txtEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_margin="10dp"
         android:hint="Correo"
+        android:layout_margin="10dp"
         android:inputType="textEmailAddress" />
 
     <EditText
@@ -52,12 +40,29 @@
         android:layout_margin="10dp"
         android:inputType="textPassword" />
 
-    <Button
-        android:onClick="registro"
-        android:id="@+id/button"
+    <TextView
+        android:onClick="olvidarContrasena"
+        android:gravity="center"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Crear Cuenta"
+        android:text="¿Olvidaste contraseña?" />
+
+    <TextView
+        android:onClick="registro"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registrar" />
+
+    <Button
+        android:onClick="login"
+        android:id="@+id/btn_Login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Iniciar session"
+        android:layout_margin="10dp"
         android:background="@color/design_default_color_primary"
         android:textColor="@android:color/white"/>
 </LinearLayout>
