Fragments salir y contactos
Se agrega el fragment salir y el fragments contactos

--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_cotacto.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_cotacto.xml
@@ -10,6 +10,11 @@
     android:orientation="vertical"
     tools:context=".ui.contacto.CotactoFragment">
 
+    <ImageView
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        app:srcCompat="@drawable/ic_contacts" />
+
     <TextView
         android:id="@+id/tv_Contacto"
         android:layout_width="wrap_content"
