--- a/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Digite correo"/>
+        android:hint="Digite correo"/>
 
     <Button
         android:onClick="enviar"
