--- a/etiquetas_kotlin/app/src/main/res/menu/activity_principal2_drawer.xml
+++ b/etiquetas_kotlin/app/src/main/res/menu/activity_principal2_drawer.xml
@@ -16,5 +16,15 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+        <item
+            android:id="@+id/nav_contact"
+            android:icon="@drawable/ic_contacts"
+            android:title="@string/menu_contactos" />
+
+        <item
+            android:id="@+id/nav_salir"
+            android:icon="@drawable/ic_salir"
+            android:title="@string/nav_salir" />
+
     </group>
 </menu>
