--- a/etiquetas_kotlin/app/src/main/res/navigation/mobile_navigation.xml
+++ b/etiquetas_kotlin/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,17 @@
         android:name="com.sc703.etiquetas_kotlin.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_contact"
+        android:name="com.sc703.etiquetas_kotlin.ui.contacto.CotactoFragment"
+        android:label="@string/menu_contactos"
+        tools:layout="@layout/fragment_cotacto" />
+
+    <fragment
+        android:id="@+id/nav_salir"
+        android:name="com.sc703.etiquetas_kotlin.ui.salir.SalirFragment"
+        android:label="@string/nav_salir"
+        tools:layout="@layout/fragment_salir" />
+
 </navigation>
