--- a/etiquetas_kotlin/app/src/main/res/navigation/mobile_navigation.xml
+++ b/etiquetas_kotlin/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,6 +30,12 @@
         tools:layout="@layout/fragment_cotacto" />
 
     <fragment
+        android:id="@+id/nav_tag"
+        android:name="com.sc703.etiquetas_kotlin.ui.etiqueta.EtiquetaFragment"
+        android:label="@string/menu_tag"
+        tools:layout="@layout/fragment_cotacto" />
+
+    <fragment
         android:id="@+id/nav_salir"
         android:name="com.sc703.etiquetas_kotlin.ui.salir.SalirFragment"
         android:label="@string/nav_salir"
