recycler_view tag update

--- a/etiquetas_kotlin/app/src/main/res/layout/tag.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/tag.xml
@@ -9,9 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@color/tag_blue"
+        android:background="@color/tag_no_color"
         android:orientation="horizontal"
         android:weightSum="10">
+
+        <LinearLayout
+            android:layout_width="10dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
 
         <LinearLayout
             android:layout_width="97dp"
