--- a/etiquetas_kotlin/app/src/main/res/values/colors.xml
+++ b/etiquetas_kotlin/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="tag_blue">#61A8FF</color>
     <color name="tag_red">#FF6961</color>
     <color name="tag_green">#61FFB8</color>
+    <color name="tag_no_color">#DDDDDD</color>
 </resources>
