--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_cotacto.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_cotacto.xml
@@ -27,8 +27,8 @@
         android:id="@+id/tv_Contacto2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20"
-        android:layout_marginBottom="20"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:text="@string/Contacto_label"
         android:textColor="@color/black"
@@ -43,8 +43,8 @@
             android:id="@+id/btn_Llamar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10"
-            android:layout_marginRight="10"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:text="@string/btn_call"
             app:icon="@drawable/ic_call" />
 
@@ -52,9 +52,9 @@
             android:id="@+id/btn_Correo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10"
-            android:layout_marginEnd="10"
-            android:paddingLeft="16"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:paddingLeft="16dp"
             android:text="@string/btn_send"
             app:icon="@drawable/ic_mail" />
     </LinearLayout>
