--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
@@ -95,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="2"
-        android:rowCount="2">
+        android:rowCount="1">
 
         <Button
             android:id="@+id/btn_TAGAgregar"
@@ -113,6 +113,17 @@
             android:layout_row="0"
             android:layout_marginStart="15dp"/>
 
+
+
+    </GridLayout>
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="3"
+        android:rowCount="2">
+
+
         <Button
             android:id="@+id/btn_TAGEliminar"
             android:layout_width="wrap_content"
@@ -129,5 +140,15 @@
             android:layout_marginStart="15dp"
             android:layout_column="1"
             android:layout_row="1"/>
+        <Button
+            android:id="@+id/btn_TAGLimpiar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_clean"
+            android:layout_marginStart="15dp"
+            android:layout_column="2"
+            android:layout_row="1"/>
+
+
     </GridLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
