--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
@@ -34,7 +34,13 @@
             android:id="@+id/edt_TAGcolor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/tag_color_hint" />
+            android:hint="@string/tag_color_hint"
+            android:visibility="gone" />
+
+        <Spinner
+            android:id="@+id/spn_TAGcolor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="match_parent"
