--- a/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
+    android:gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".RecuperarPassActivity">
 
@@ -13,22 +14,22 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:indeterminate="true"/>
+        android:indeterminate="true"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/Correo_hint"/>
+        android:hint="@string/Correo_hint"
+        android:inputType="textPersonName" />
 
     <Button
-        android:onClick="enviar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_SendPassword"
         android:background="@color/design_default_color_primary"
-        android:textColor="@android:color/white"/>
+        android:onClick="enviar"
+        android:text="@string/btn_SendPassword"
+        android:textColor="@android:color/white" />
 </LinearLayout>
