--- a/etiquetas_kotlin/app/src/main/res/menu/activity_principal2_drawer.xml
+++ b/etiquetas_kotlin/app/src/main/res/menu/activity_principal2_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_contacts"
-            android:title="@string/menu_contactos" />
+            android:title="@string/menu_contact" />
 
         <item
             android:id="@+id/nav_tag"
