--- a/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
@@ -32,4 +32,17 @@
         android:onClick="enviar"
         android:text="@string/btn_SendPassword"
         android:textColor="@android:color/white" />
+
+    <com.google.android.gms.ads.AdView
+        android:layout_marginTop="35dp"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/av_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
+
 </LinearLayout>
