--- a/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:gravity="center_vertical"
     android:orientation="vertical"
+    android:visibility="visible"
     tools:context=".LoginActivity">
 
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
-        android:background="@drawable/ic_user" />
+        android:background="@drawable/users" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
@@ -46,6 +48,8 @@
         android:layout_margin="10dp"
         android:gravity="center"
         android:onClick="olvidarContrasena"
+        android:fontFamily="sans-serif-black"
+        android:textColor="@color/black"
         android:text="@string/ForgotPassword" />
 
     <TextView
@@ -54,6 +58,8 @@
         android:layout_margin="10dp"
         android:gravity="center"
         android:onClick="registro"
+        android:fontFamily="sans-serif-black"
+        android:textColor="@color/black"
         android:text="@string/Register" />
 
     <Button
