--- a/etiquetas_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
 
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</LinearLayout>
