--- a/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
@@ -7,6 +7,7 @@
     android:layout_margin="20dp"
     android:gravity="center_vertical"
     android:orientation="vertical"
+    android:background="@drawable/backgr"
     tools:context=".RecuperarPassActivity">
 
     <ProgressBar
