--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_storage.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_storage.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="start"
     android:orientation="vertical"
+    android:background="@drawable/backgr"
     tools:context=".ui.storage.StorageFragment">
 
     <LinearLayout
@@ -20,6 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Storage_Image_name"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/black"
             android:textSize="18dp" />
 
         <EditText
