--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_salir.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_salir.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.salir.SalirFragment"
     android:orientation="vertical"
     android:background="@drawable/background"
     android:gravity="center">
+
+    <ImageView
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        app:srcCompat="@drawable/exit"  />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/close_session_click"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="20sp" />
 
     <Button
