toast messages ahora en strings

--- a/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:ems="10"
-        android:hint="@string/Correo_hint"
+        android:hint="@string/Email_hint"
         android:inputType="textEmailAddress" />
 
     <EditText
