--- a/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_recuperar_pass.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/Correo_hint"
+        android:hint="@string/Email_hint"
         android:inputType="textPersonName" />
 
     <Button
