--- a/etiquetas_kotlin/app/src/main/res/layout/activity_registrar2.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_registrar2.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:ems="10"
-        android:hint="@string/Correo"
+        android:hint="@string/Email_label"
         android:inputType="textEmailAddress" />
 
     <EditText
