--- a/etiquetas_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,20 @@
     tools:context=".MainActivity">
 
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:background="@drawable/iconop"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:fontFamily="sans-serif-black"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:text="@string/welcome_App" />
 
 </LinearLayout>
