--- a/etiquetas_kotlin/app/src/main/res/layout/tag.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/tag.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/tag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -18,6 +19,11 @@
             android:layout_height="match_parent"
             android:layout_margin="4dp"
             android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tag_id" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -55,6 +61,12 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_item_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="-" />
+
+            <TextView
                 android:id="@+id/tv_item_operator_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,10 +95,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="-" />
+
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="203dp"
             android:layout_height="match_parent"
             android:layout_weight="7.5"
             android:gravity="center"
@@ -108,17 +121,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_item_edit"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:background="@android:drawable/ic_menu_edit"
-                        android:backgroundTint="@color/black" />
-
-                    <TextView
                         android:id="@+id/tv_item_delete"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:background="@drawable/ic_delete" />
+                        android:background="@drawable/ic_delete"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
