--- a/etiquetas_kotlin/app/src/main/res/menu/activity_principal2_drawer.xml
+++ b/etiquetas_kotlin/app/src/main/res/menu/activity_principal2_drawer.xml
@@ -30,7 +30,7 @@
         <item
             android:id="@+id/nav_salir"
             android:icon="@drawable/ic_salir"
-            android:title="@string/nav_salir" />
+            android:title="@string/nav_close_session" />
 
     </group>
 </menu>
