--- a/etiquetas_kotlin/app/src/main/res/navigation/mobile_navigation.xml
+++ b/etiquetas_kotlin/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,7 +38,7 @@
     <fragment
         android:id="@+id/nav_salir"
         android:name="com.sc703.etiquetas_kotlin.ui.salir.SalirFragment"
-        android:label="@string/nav_salir"
+        android:label="@string/nav_close_session"
         tools:layout="@layout/fragment_salir" />
 
 </navigation>
