--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
@@ -3,37 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="2dp"
+    android:background="@drawable/backgr"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/backgr"
     tools:context=".ui.etiqueta.EtiquetaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:textColor="@color/black"
-            android:text="@string/tag_id" />
+            android:text="@string/tag_id"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edt_TAGid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/tag_id_hint"/>
+            android:hint="@string/tag_id_hint" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:textColor="@color/black"
-            android:text="@string/tag_color" />
+            android:text="@string/tag_color"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edt_TAGcolor"
@@ -51,8 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:textColor="@color/black"
-            android:text="@string/tag_operator_name" />
+            android:text="@string/tag_operator_name"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edt_TAGoperator"
@@ -64,8 +64,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:textColor="@color/black"
-            android:text="@string/tag_production_line" />
+            android:text="@string/tag_production_line"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edt_TAGline"
@@ -77,32 +77,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:textColor="@color/black"
-            android:text="@string/tag_description" />
+            android:text="@string/tag_description"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edt_TAGdescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/tag_description_hint" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:textColor="@color/black"
-            android:text="@string/tag_emission_date" />
+            android:text="@string/tag_emission_date"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edt_TAGemission"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/tag_emission_date_hint" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:textColor="@color/black"
-            android:text="@string/tag_close_date" />
+            android:text="@string/tag_close_date"
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/edt_TAGclose"
@@ -122,18 +124,18 @@
             android:id="@+id/btn_TAGAgregar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_add"
+            android:layout_row="0"
             android:layout_column="0"
-            android:layout_row="0"/>
+            android:text="@string/btn_add" />
+
         <Button
             android:id="@+id/btn_TAGBuscar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_find"
-            android:layout_column="1"
             android:layout_row="0"
-            android:layout_marginStart="15dp"/>
-
+            android:layout_column="1"
+            android:layout_marginStart="15dp"
+            android:text="@string/btn_find" />
 
 
     </GridLayout>
@@ -149,26 +151,27 @@
             android:id="@+id/btn_TAGEliminar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_delete"
+            android:layout_row="1"
             android:layout_column="0"
-            android:layout_row="1"/>
+            android:text="@string/btn_delete" />
 
         <Button
             android:id="@+id/btn_TAGEditar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_edit"
-            android:layout_marginStart="15dp"
+            android:layout_row="1"
             android:layout_column="1"
-            android:layout_row="1"/>
+            android:layout_marginStart="15dp"
+            android:text="@string/btn_edit" />
+
         <Button
             android:id="@+id/btn_TAGLimpiar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_clean"
-            android:layout_marginStart="15dp"
+            android:layout_row="1"
             android:layout_column="2"
-            android:layout_row="1"/>
+            android:layout_marginStart="15dp"
+            android:text="@string/btn_clean" />
 
 
     </GridLayout>
