--- a/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
+++ b/etiquetas_kotlin/app/src/main/res/layout/fragment_etiqueta.xml
@@ -45,7 +45,9 @@
         <Spinner
             android:id="@+id/spn_TAGcolor"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="match_parent"
